Add DrosophilaCompartment + generalize AllenCCFNavigator
This allows for e.g., hierarchical labels for tagging etc, and seeds the framework for other
Navigators